Fixed contrast problem

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -1,7 +1,7 @@
 /* Define color variables */
 :root {
     --primary-color: #0e629b;
-    --secondary-color: #069401;
+    --secondary-color: #0E6900;
     --background-color: #ecf0f1;
     --text-color: #333;
     --font-family: Arial, sans-serif;
